tests/baselines/reference/project/declarationDir/amd/declarationDir.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(3,5): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
subfolder/c.ts(4,5): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== b.ts (0 errors) ====
    export class B {
        
    }
==== a.ts (1 errors) ====
    import {B} from './subfolder/b';
    export class A {
        b: B;
        ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
    }
==== subfolder/c.ts (1 errors) ====
    import {A} from '../a';
    
    export class C {
        a: A;
        ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    }